--- a/src/app/pages/ride/manual-ride/manual-ride.component.html
+++ b/src/app/pages/ride/manual-ride/manual-ride.component.html
@@ -105,7 +105,7 @@
                                       <input type="datetime-local" class="form-control" formControlName="requesttime" name="requesttime">
                                     </p>
                                 </div>
-                                <div class="col-sm-6">
+                                <!-- <div class="col-sm-6">
                                     <p class="form-group">
                                       <label for="driver_id">Assign To Driver </label>
                                       <select class="form-control" name="driver_id" formControlName="driver_id">
@@ -113,7 +113,7 @@
                                         <option *ngFor="let data of driverData" [value]="data.driver_id">{{data.name}}</option>
                                       </select>
                                     </p>
-                                </div>
+                                </div> -->
                                 <div class="col-sm-12">
                                     <p class="form-group">
                                       <label for="drivernote">Driver Note </label>
