--- a/src/app/pages/ride/ride-details/ride-details.component.html
+++ b/src/app/pages/ride/ride-details/ride-details.component.html
@@ -23,18 +23,34 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="row">
-                            <div class="col-sm-4">
+                            <div class="col-sm-2">
                                 <h3>Booking Details</h3>
                             </div>
-                            <div class="col-sm-8 text-right">
-                                <button *ngIf="data.ride.status == 2" class="btn btn-primary" (click)="startride()">Start Ride</button>
-                                <button *ngIf="data.ride.status == 3" class="btn btn-primary" (click)="reachedpickup()">Reached Pickup Location</button>
-                                <button *ngIf="data.ride.status == 4" class="btn btn-primary" (click)="reacheddrop()">Reached Drop Location</button>
-                                <button *ngIf="data.ride.status == 5" class="btn btn-primary" (click)="paymentdone()">Ride Payment Done</button>
-                                <button *ngIf="data.ride.status == 6" class="btn btn-primary" (click)="completedride(completeRide)">Complete Ride</button>
-                                <button *ngIf="data.ride.status != 8 && data.ride.status != 7" style="margin-left:15px;" class="btn btn-danger" (click)="cancelledride(cancelRide)">Cancel Ride</button>
-                                <h3 *ngIf="data.ride.status == 7" style="color: green;font-weight: bold;">Ride Completed</h3>
-                                <h3 *ngIf="data.ride.status == 8" style="color: red;font-weight: bold;">Ride Cancelled</h3>
+                            <div class="col-sm-10 text-right">
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="form-group row" *ngIf="data.ride.status == 1 && this.appservice.role == 'admin'">
+                                            <label for="staticEmail" class="col-sm-4 col-form-label">Assign Driver</label>
+                                            <div class="col-sm-6">
+                                                <select class="form-control" name="driver_id" [(ngModel)]="driver_id">
+                                                  <option value="">Select</option>
+                                                  <option *ngFor="let data of driverData" [value]="data.driver_id">{{data.name}}</option>
+                                                </select>
+                                            </div>
+                                            <button type="button" (click)="assignDriver()" class="btn btn-primary col-sm-2">Submit</button>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <button *ngIf="data.ride.status == 2 && this.appservice.role == 'admin'" class="btn btn-primary" (click)="startride()">Start Ride</button>
+                                        <button *ngIf="data.ride.status == 3 && this.appservice.role == 'admin'" class="btn btn-primary" (click)="reachedpickup()">Reached Pickup Location</button>
+                                        <button *ngIf="data.ride.status == 4 && this.appservice.role == 'admin'" class="btn btn-primary" (click)="reacheddrop()">Reached Drop Location</button>
+                                        <button *ngIf="data.ride.status == 5 && this.appservice.role == 'admin'" class="btn btn-primary" (click)="paymentdone()">Ride Payment Done</button>
+                                        <button *ngIf="data.ride.status == 6 && this.appservice.role == 'admin'" class="btn btn-primary" (click)="completedride(completeRide)">Complete Ride</button>
+                                        <button *ngIf="data.ride.status != 8 && data.ride.status != 7" style="margin-left:15px;" class="btn btn-danger" (click)="cancelledride(cancelRide)">Cancel Ride</button>
+                                        <h3 *ngIf="data.ride.status == 7" style="color: green;font-weight: bold;">Ride Completed</h3>
+                                        <h3 *ngIf="data.ride.status == 8" style="color: red;font-weight: bold;">Ride Cancelled</h3>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -49,17 +65,23 @@
                             <div class="col-sm-4">
                                 <p><b>User Phone No.</b>: {{data.customer.phone}}</p>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-sm-4" *ngIf="data.ride.status != 1">
                                 <p><b>Driver Name</b>: {{data.driver.name}}</p>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-sm-4" *ngIf="data.ride.status != 1">
                                 <p><b>Driver Phone no</b>: {{data.driver.phone}}</p>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-sm-4" *ngIf="data.ride.status != 1">
                                 <p><b>Driver Note</b>: {{data.ride.drivernote}}</p>
                             </div>
                             <div class="col-sm-12" *ngIf="data.ride.status == 2">
                                 <p><b>Ride Cancelled Reason:</b></p>
+                            </div>
+                            <div class="col-sm-12" *ngIf="data.ride.company_name != null">
+                                <p><b>Partner Name:</b>{{data.ride.company_name}}</p>
+                            </div>
+                            <div class="col-sm-12" *ngIf="data.ride.partner_id != null">
+                                <p><b>Partner Id:</b>{{data.ride.partner_id}}</p>
                             </div>
                         </div>
                     </div>
