--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="card card-outline card-primary">
     <div class="card-header text-center">
-        <a [routerLink]="['/']" class="h1"><b>Gosarthii</b></a>
+        <a class="h4"><b><img src="../../../assets/img/logo.png" width="80px"></b> Admin Panel</a>
     </div>
     <div class="card-body">
         <p class="login-box-msg">Sign in to start your session</p>
@@ -33,14 +33,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-7">
+                <!-- <div class="col-7">
                     <div class="icheck-primary">
                         <input type="checkbox" id="remember" />
                         <label for="remember"> Remember Me </label>
                     </div>
-                </div>
+                </div> -->
                 <!-- /.col -->
-                <div class="col-5">
+                <div class="col-12 text-center">
                     <app-button
                         [type]="'submit'"
                         [block]="true"
