--- a/src/app/modules/main/footer/footer.component.html
+++ b/src/app/modules/main/footer/footer.component.html
@@ -2,12 +2,12 @@
 <strong>
     <span>Copyright &copy; {{ currentYear }}</span>
     <a
-        href="https://erdkse.com"
+        href="https://gosarthii.com/"
         target="_blank"
         rel="noopener noreferrer"
         style="margin: 0"
     >
-        erdkse.com</a
+        gosarthii.com</a
     >
     <span>.</span>
 </strong>
