--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active">Dashboard v1</li>
+                    <li class="breadcrumb-item active">Dashboard</li>
                 </ol>
             </div>
             <!-- /.col -->
@@ -24,13 +24,13 @@
     <div class="container-fluid">
         <!-- Small boxes (Stat box) -->
         <div class="row">
-            <div class="col-lg-3 col-6">
+            <div class="col-lg-3 col-6" *ngIf="this.appservice.role == 'admin'">
                 <!-- small box -->
                 <div class="small-box bg-info">
                     <div class="inner">
-                        <h3>150</h3>
+                        <h3>{{partnerCount}}</h3>
 
-                        <p>New Orders</p>
+                        <p>Partner Count</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-bag"></i>
@@ -45,9 +45,9 @@
                 <!-- small box -->
                 <div class="small-box bg-success">
                     <div class="inner">
-                        <h3>53<sup style="font-size: 20px">%</sup></h3>
+                        <h3>{{customerCount}}</h3>
 
-                        <p>Bounce Rate</p>
+                        <p>Driver Count</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
@@ -62,9 +62,9 @@
                 <!-- small box -->
                 <div class="small-box bg-warning">
                     <div class="inner">
-                        <h3>44</h3>
+                        <h3>{{rideOngoingCount}}</h3>
 
-                        <p>User Registrations</p>
+                        <p>Total Ongoing Rides</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-person-add"></i>
@@ -79,9 +79,9 @@
                 <!-- small box -->
                 <div class="small-box bg-danger">
                     <div class="inner">
-                        <h3>65</h3>
+                        <h3>{{rideCompletedCount}}</h3>
 
-                        <p>Unique Visitors</p>
+                        <p>Total Completed Rides</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-pie-graph"></i>
