--- a/src/styles.scss
+++ b/src/styles.scss
@@ -213,3 +213,7 @@ tabset .nav-tabs{
     color: #fff !important;
 }
 
+.login-page{
+    background-image: url('./assets/img/bg.jpg');
+    background-size: cover;
+}
