--- a/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -6,7 +6,7 @@
         class="brand-image img-circle elevation-3"
         style="opacity: 0.8"
     />
-    <span class="brand-text font-weight-light">AdminLTE 3</span>
+    <span class="brand-text font-weight-light">Admin Panel</span>
 </a>
 
 <!-- Sidebar -->
@@ -21,7 +21,7 @@
             />
         </div>
         <div class="info">
-            <a [routerLink]="['/profile']" class="d-block">
+            <a class="d-block">
                 {{ user.username }}
             </a>
         </div>
