--- a/src/app/pages/driver/deactived-driver/deactived-driver.component.html
+++ b/src/app/pages/driver/deactived-driver/deactived-driver.component.html
@@ -27,7 +27,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-sm-12">
-                        <table id="example1" class="table table-bordered table-striped dataTable dtr-inline" datatable [dtOptions]="dtOptions" #table>
+                        <table id="example1" class="table table-bordered table-striped dataTable dtr-inline" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" #table>
                             <thead>
                                 <tr>
                                     <th>Driver Id</th>
