--- a/src/app/pages/ride/assign-ride/assign-ride.component.html
+++ b/src/app/pages/ride/assign-ride/assign-ride.component.html
@@ -32,7 +32,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-sm-12">
-                        <table id="example1" class="table table-bordered table-striped dataTable dtr-inline" datatable [dtOptions]="dtOptions" #table>
+                        <table id="example1" class="table table-bordered table-striped dataTable dtr-inline" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" #table>
                             <thead>
                                 <tr>
                                     <th>Ride Id</th>
